--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header></header>
-    <div class = "image"></div>
+    <header>
+        <h1>Tic Tac Toe!</h1>
+    </header>
     <div class="container">
-        
         <div class="game">
             
         </div>
